This file documents the changes made to port Perl to the Stratus
VOS operating system.

For 5.8.0:
     Updated "config.alpha.def", "config.ga.def", "build.cm", and
     "install_perl.cm" to use directory naming conventions that
     are closer to the perl standard directory names.

     For the first time, full perl can now be built on VOS using
     its native Configure script and makefiles.  See README.vos
     for details.

For 5.7.1:
     Updated "build.cm" and "compile_perl.cm" to build perl using
          either cc or gcc.
     Brought "config.alpha.def" and "config.ga.def" up-to-date.
     Updated "configure_perl.cm" to rebuild the header file even if
          the date of the definitions file is equal to the date of
          the header, because the perl distribution resets all dates
          to the same value.
     Update "Changes".
     Update "perl.bind".

For 5.7:
     Updated "build.cm" to build perl using either the alpha or GA
          version of POSIX.
     Updated "Changes".
     Updated "compile_perl.cm" to use either the alpha or GA
          version of POSIX.
     Split "config.def" into config.alpha.def and config.ga.def;
          one for each version. Use the configure_perl.cm macro
          to select the appropriate version.
     Split "config.h" into config.alpha.h and config.ga.h. Use the
          configure_perl.cm macro to select the appropriate version.
     Updated "config.pl". It now diagnoses undefined (missing) and
          unused substitution variables. When a new version of
          Perl comes out, run "configure_perl.cm", add any missing
          definitions to config.*.def, and remove any unused
          definitions.
     Removed "config_h.SH_orig". It is no longer needed.
     Added "configure_perl.cm". It is used to configure perl so that
          it can be built with either version of VOS POSIX.1 support.
     Added "install_perl.cm" to install Perl into the appropriate
          system directories.