@@ -44,7 +44,7 @@ using the VOS Standard C Cross-compiler.  You must build perl on
 VOS Release 14.1.0 (or later) on an XA/R or Continuum platform.
 
 This version of perl is properly called "miniperl" because it
-does not contain the full perl functionality.
+does not contain the complete perl functionality.
 
 You must build perl with the compile_perl.cm command macro found
 in the vos subdirectory.
@@ -58,7 +58,7 @@ perl on VOS Release 14.1.0 (or later) on an XA/R or Continuum
 platform.
 
 This version of perl is properly called "miniperl" because it
-does not contain the full perl functionality.
+does not contain the complete perl functionality.
 
 You must build perl with the compile_perl.cm command macro found
 in the vos subdirectory.
@@ -73,7 +73,7 @@ on VOS Release 14.1.0 (or later) on an XA/R or Continuum
 platform.
 
 This version of perl is properly called "miniperl" because it
-does not contain the full perl functionality.
+does not contain the complete perl functionality.
 
 You must build perl with the compile_perl.cm command macro found
 in the vos subdirectory.
@@ -81,14 +81,14 @@ in the vos subdirectory.
 =item 4
 
 If you have a Stratus Continuum (PARISC-based) platform that is
-running VOS Release 14.3.0 through VOS Release 14.4.0, you must
+running VOS Release 14.3.0 through VOS Release 14.4.1, you must
 build perl using the generally-available version of VOS POSIX
 support, and using either the VOS Standard C compiler or the VOS
 GNU C compiler.  You must build perl on VOS Release 14.3.0 (or
 later) on a Continuum platform.
 
 This version of perl is properly called "miniperl" because it
-does not contain the full perl functionality.
+does not contain the complete perl functionality.
 
 You must build perl with the compile_perl.cm command macro found
 in the vos subdirectory.
@@ -96,17 +96,17 @@ in the vos subdirectory.
 =item 5
 
 If you have a Stratus Continuum (PA-RISC-based) platform that is
-running VOS Release 14.4.1 or later, you must build perl using
-the generally-available version of VOS POSIX support.  You must
-use the VOS GNU C compiler and the VOS GNU Tools product.  You
-must build perl on VOS Release 14.4.1 (or later) on a Continuum
-platform.
+running VOS Release 14.5.0 or later, you can either use the
+previous method to build "miniperl" or you can build "full
+perl", which contains the complete functionality of perl.  I
+strongly recommend that you build full perl.  To build full
+perl, you must use the generally-available version of VOS POSIX
+support.  You must use the VOS GNU C compiler and the VOS GNU
+C/C++ and GNU Tools Release 2.0.1 product.  You must build full
+perl on VOS Release 14.5.0 (or later) on a Continuum platform.
 
-This version of perl is properly called "full perl" because it
-contains the full perl functionality.
-
-You must use the supplied Configure script and makefiles to build
-perl.
+You must build full perl with the compile_full_perl.cm command
+macro found in the vos subdirectory.
 
 =back
 
@@ -223,20 +223,11 @@ execute on the PA7100, PA8000, PA8500 and PA8600 processors, and
 that code compiled for the pa8000 processor type can execute on
 the PA8000, PA8500 and PA8600 processors.
 
-To build perl using the supplied Configure script and makefiles,
-execute the following commands.
-
-     !add_library_path command >system>gnu_library>bin -after '(current_dir)'
-     !bash
-          gzip -d perl-5.8.0.tar.gz
-          tar -xvf perl-5.8.0.tar
-          cd perl-5.8.0
-          Configure -d
-          gmake
-
-If you wish to run the test cases, type:
-
-          gmake test
+To build full perl using the supplied Configure script and
+makefiles, change to the "vos" subdirectory and type the command
+"compile_full_perl" or "start_process compile_full_perl".  This
+will configure, build, and test perl.  All of the test cases
+that are executed should pass.
 
 =head2 Installing Perl 5 on VOS
 
@@ -343,6 +334,6 @@ Paul Green (Paul.Green@stratus.com)
 
 =head1 LAST UPDATE
 
-February 15, 2001
+May 5, 2002
 
 =cut
