@@ -1,0 +1,3 @@
+# This macro makes full perl and runs its test scripts
+gmake
+gmake test
